[package]
name = "beamformer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = '1.5.1'
clap = '3.0.0-beta.5'
gnuplot = '0.0.37'
num-complex = '0.4.0'
num-traits = '0.2.14'
rustfft = '6.0.1'
special = '0.8.1'
ndarray-npy = {version="0.8.1", default-features = true}
itertools-num='0.1.3'
serde_yaml = '0.8.21'
serde = { version = "1.0", features = ["derive"] }
rspfb= {path="../rspfb"}
rand = '0.8.4'
rand_chacha = '0.3.1'
rand_distr = '0.4.2'


[dependencies.ndarray]
features = ['rayon']
version = '0.15.3'
